fixed z-index

--- a/styles/styles.css
+++ b/styles/styles.css
@@ -16,6 +16,7 @@ header {
     left: 0px;
     padding: 1%;
     display: flex;
+    z-index: 3;
 }
 
 #nav-bar {
@@ -172,6 +173,7 @@ Projects section
     touch-action: manipulation;
     white-space: nowrap;
     will-change: box-shadow, transform;
+    z-index: 1;
 }
 .gitub-button:focus {
     box-shadow: #D6D6E7 0 0 0 1.5px inset, rgba(45, 35, 66, 0.4) 0 2px 4px, rgba(45, 35, 66, 0.3) 0 7px 13px -3px, #D6D6E7 0 -3px 0 inset;
